@@ -12,6 +12,7 @@
 #define SYSCALL_CLOSE		6
 #define SYSCALL_WAITPID		7
 #define SYSCALL_EXECVE		11
+#define SYSCALL_CHDIR		12
 #define SYSCALL_TIME		13
 #define SYSCALL_GETPID		20
 #define SYSCALL_TIMES		43
